; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_player.c_on_player_media_meta_changed.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_player.c_on_player_media_meta_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*)* @on_player_media_meta_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_player_media_meta_changed(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @VLC_UNUSED(i32* %8)
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @vlc_playlist_AssertLocked(i32* %12)
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @vlc_playlist_NotifyMediaUpdated(i32* %14, i32* %15)
  ret void
}

declare dso_local i32 @VLC_UNUSED(i32*) #1

declare dso_local i32 @vlc_playlist_AssertLocked(i32*) #1

declare dso_local i32 @vlc_playlist_NotifyMediaUpdated(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
